--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "ts-node-dev src/server.ts"
+		"dev": "ts-node-dev src/server.ts",
+		"typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -15,6 +16,9 @@
 		"typescript": "^5.3.3"
 	},
 	"dependencies": {
-		"express": "^4.18.2"
+		"express": "^4.18.2",
+		"reflect-metadata": "^0.2.1",
+		"sqlite3": "^5.1.7",
+		"typeorm": "^0.2.34"
 	}
 }
