--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@types/express": "^4.17.21",
+		"@types/uuid": "^9.0.8",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^5.3.3"
 	},
@@ -19,6 +20,7 @@
 		"express": "^4.18.2",
 		"reflect-metadata": "^0.2.1",
 		"sqlite3": "^5.1.7",
-		"typeorm": "^0.2.34"
+		"typeorm": "^0.2.34",
+		"uuid": "^9.0.1"
 	}
 }
