--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	},
 	"dependencies": {
 		"express": "^4.18.2",
+		"express-async-errors": "^3.1.1",
 		"reflect-metadata": "^0.2.1",
 		"sqlite3": "^5.1.7",
 		"typeorm": "^0.2.34",
