--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/bcryptjs": "^2.4.6",
 		"@types/express": "^4.17.21",
 		"@types/jsonwebtoken": "^9.0.5",
 		"@types/uuid": "^9.0.8",
@@ -18,6 +19,7 @@
 		"typescript": "^5.3.3"
 	},
 	"dependencies": {
+		"bcryptjs": "^2.4.3",
 		"express": "^4.18.2",
 		"express-async-errors": "^3.1.1",
 		"jsonwebtoken": "^9.0.2",
